tests/algorithms/x/PHP/physics/lens_formulae.error
run: exit status 255
6.6666666666667
-5.0516129032258

Fatal error: Uncaught TypeError: Unsupported operand types: float / string in /workspace/mochi/tests/algorithms/x/PHP/physics/lens_formulae.php:50
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/physics/lens_formulae.php(60): object_distance(10.0, 40.0)
#1 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/physics/lens_formulae.php on line 50
